--- a/pom.xml
+++ b/pom.xml
@@ -39,15 +39,13 @@
                 <version>0.8.5</version>
                 <executions>
                     <execution>
-                        <id>prepare-agent-123456</id>
-                        <phase>initialize</phase>
                         <goals>
                             <goal>prepare-agent</goal>
                         </goals>
                     </execution>
                     <execution>
-                        <id>report-9876543210</id>
-                        <phase>verify</phase>
+                        <id>jacoco-report</id>
+                        <phase>test</phase>
                         <goals>
                             <goal>report</goal>
                         </goals>
@@ -60,12 +58,11 @@
                        <configuration>
                            <rules>
                                <rule>
-                                   <element>BUNDLE</element>
                                    <limits>
                                        <limit>
-                                           <counter>BRANCH</counter>
+                                           <counter>LINE</counter>
                                            <value>COVEREDRATIO</value>
-                                           <minimum>1</minimum>
+                                           <minimum>0.90</minimum>
                                        </limit>
 
                                    </limits>
